<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/buscarContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/buscar_contactos"
        android:background="@drawable/custom_edit_text"
        android:padding="10dp"
        android:layout_margin="10dp">
    </EditText>

    <ImageButton
        android:id="@+id/imagenContactos"
        android:layout_below="@+id/buscarContactos"
        android:layout_alignParentRight="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/addcontact3">
    </ImageButton>

    <TextView
        android:id="@+id/txtNombre"
        android:layout_below="@+id/imagenContactos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:text="@string/nombre"
        android:layout_marginLeft="10dp"
        android:visibility="gone">
    </TextView>

    <EditText
        android:id="@+id/editNombre"
        android:layout_toRightOf="@+id/txtNombre"
        android:layout_below="@+id/imagenContactos"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </EditText>

    <TextView
        android:id="@+id/txtTelefono"
        android:layout_below="@+id/editNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:text="@string/telefono"
        android:layout_marginLeft="10dp"
        android:visibility="gone">
    </TextView>

    <EditText
        android:id="@+id/editTelefono"
        android:layout_toRightOf="@+id/txtTelefono"
        android:layout_below="@+id/editNombre"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </EditText>

    <TextView
        android:id="@+id/txtSpinner"
        android:layout_below="@+id/imagenContactos"
        android:layout_toLeftOf="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/avatar"
        android:visibility="gone">
    </TextView>

    <Spinner
        android:id="@+id/spinner"
        android:layout_below="@+id/imagenContactos"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="gone">
    </Spinner>

    <Button
        android:id="@+id/btnAñadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anyadir"
        android:layout_marginHorizontal="5dp"
        android:layout_below="@id/editTelefono"
        android:visibility="gone">
    </Button>

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificar"
        android:layout_marginHorizontal="5dp"
        android:layout_below="@id/editTelefono"
        android:visibility="invisible">
    </Button>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_marginHorizontal="5dp"
        android:layout_below="@id/editTelefono"
        android:layout_toRightOf="@+id/btnModificar"
        android:visibility="gone">
    </Button>

    <ListView
        android:id="@+id/listViewAvatar"
        android:layout_below="@id/btnModificar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
</RelativeLayout>